--- a/photography.html
+++ b/photography.html
@@ -345,7 +345,7 @@
                 name: "img1.jpg", 
                 category: "landscapes", 
                 description: "A sufer viewing a passing helicopter",
-                image: "images/simon.png" // Replace with your actual image path
+                image: "images/Simon.png" // Replace with your actual image path
             },
             { 
                 id: 2, 
