--- a/photography.html
+++ b/photography.html
@@ -359,14 +359,14 @@
                 name: "img3.jpg", 
                 category: "landscapes", 
                 description: "Beautiful sunset off the Oregon Coast",
-                image: "images/sunset.png" 
+                image: "images/Sunset.png" 
             },
             { 
                 id: 4, 
                 name: "img4.jpg", 
                 category: "landscapes", 
                 description: "Fisherman on the pier",
-                image: "images/fisherman.png" 
+                image: "images/Fisherman.png" 
             },
             { 
                 id: 5, 
@@ -380,49 +380,49 @@
                 name: "img6.jpg", 
                 category: "Street", 
                 description: "Dodger's Win!",
-                image: "images/dodger.celebration.png" 
+                image: "images/Dodger.Celebration.png" 
             },
             { 
                 id: 7, 
                 name: "img7.jpg", 
                 category: "street", 
                 description: "View of dodger stadium",
-                image: "images/dodger's.tunnel.png" 
+                image: "images/Dodger's.tunnel.png" 
             },
             { 
                 id: 8, 
                 name: "img8.jpg", 
                 category: "landscapes", 
                 description: "Surfer approaching the waves",
-                image: "images/chaser.surf.png" 
+                image: "images/Chaser.Surf.png" 
             },
             { 
                 id: 9, 
                 name: "img9.jpg", 
                 category: "portraits", 
                 description: "My Dawg",
-                image: "images/tower.png" 
+                image: "images/Tower.png" 
             },
             { 
                 id: 10, 
                 name: "img10.jpg", 
                 category: "architecture", 
                 description: "A nice church",
-                image: "images/church.png" 
+                image: "images/Church.png" 
             },
             { 
                 id: 11, 
                 name: "img11.jpg", 
                 category: "street", 
                 description: "Some take life fast. Others slow",
-                image: "images/biker.hess.png" 
+                image: "images/Biker.Hess.png" 
             },
             { 
                 id: 12, 
                 name: "img12.jpg", 
                 category: "street", 
                 description: "Movement",
-                image: "images/car.bike.png" 
+                image: "images/Car.Bike.png" 
             },
             // Duplicate entries to ensure scrolling is required
             { 
@@ -430,28 +430,28 @@
                 name: "img13.jpg", 
                 category: "portraits", 
                 description: "I'm running out of desriptions",
-                image: "images/nightcar.png" 
+                image: "images/Nightcar.png" 
             },
             { 
                 id: 14, 
                 name: "img14.jpg", 
                 category: "architecture", 
                 description: "View of the CN tower from Rogers Center",
-                image: "images/needle.png" 
+                image: "images/Needle.png" 
             },
             { 
                 id: 15, 
                 name: "img15.jpg", 
                 category: "portraits", 
                 description: "The mascot was the only positive part of the white sox game",
-                image: "images/sox.png" 
+                image: "images/Sox.png" 
             },
             { 
                 id: 16, 
                 name: "img16.jpg", 
                 category: "landscapes", 
                 description: "The grandest of canyons",
-                image: "images/grandcanyon.png" 
+                image: "images/GrandCanyon.png" 
             },
             { 
                 id: 17, 
