--- a/photography.html
+++ b/photography.html
@@ -465,198 +465,198 @@
                 name: "img18.jpg", 
                 category: "landscapes", 
                 description: "Entrance to the Carlsbad Caverns",
-                image: "images/caves.png" 
+                image: "images/Caves.png" 
             },
             { 
                 id: 19, 
                 name: "img19.jpg", 
                 category: "landscapes", 
                 description: "Some lighthouse in South Carolina",
-                image: "images/lighthouse.png" 
+                image: "images/Lighthouse.png" 
             },
             { 
                 id: 20, 
                 name: "img20.jpg", 
                 category: "landscapes", 
                 description: "Blue Ridge Mountains",
-                image: "images/blueridge.png" 
+                image: "images/Blueridge.png" 
             },
             { 
                 id: 21, 
                 name: "img21.jpg", 
                 category: "architecture", 
                 description: "Our nations capital",
-                image: "images/washingtonmon.png" 
+                image: "images/Washingtonmon.png" 
             },
             { 
                 id: 22, 
                 name: "img22.jpg", 
                 category: "architecture", 
                 description: "A view of the empire state building through a construction site",
-                image: "images/empire.png" 
+                image: "images/Empire.png" 
             },
             { 
                 id: 23, 
                 name: "img23.jpg", 
                 category: "architecture", 
                 description: "Chi town",
-                image: "images/chicago.png" 
+                image: "images/Chicago.png" 
             },
             { 
                 id: 24, 
                 name: "img24.jpg", 
                 category: "street", 
                 description: "Summertime Chi",
-                image: "images/water.fountain.png" 
+                image: "images/Water.fountain.png" 
             },
             { 
                 id: 25, 
                 name: "img25.jpg", 
                 category: "architecture", 
                 description: "The gateway to the west",
-                image: "images/stl.arch.png" 
+                image: "images/Stl.arch.png" 
             },
             { 
                 id: 26, 
                 name: "img26.jpg", 
                 category: "portraits", 
                 description: "A cool looking bus driver in Wyoming",
-                image: "images/cowboy.png" 
+                image: "images/Cowboy.png" 
             },
             { 
                 id: 27, 
                 name: "img27.jpg", 
                 category: "landscapes", 
                 description: "Kids playing with their dog on the beach",
-                image: "images/rock.png" 
+                image: "images/Rock.png" 
             },
             { 
                 id: 28, 
                 name: "img28.jpg", 
                 category: "street", 
                 description: "Kid getting some much needed screentime at a crowded event",
-                image: "images/screentime.png" 
+                image: "images/Screentime.png" 
             },
             { 
                 id: 29, 
                 name: "img29.jpg", 
                 category: "street", 
                 description: "Fishing with a view",
-                image: "images/fishermansf.png" 
+                image: "images/FishermanSF.png" 
             },
             { 
                 id: 30, 
                 name: "img30.jpg", 
                 category: "landscapes", 
                 description: "Guy living in the moment",
-                image: "images/doublesunset.png" 
+                image: "images/Doublesunset.png" 
             },
             { 
                 id: 31, 
                 name: "img31.jpg", 
                 category: "street", 
                 description: "The bean",
-                image: "images/bean.png" 
+                image: "images/Bean.png" 
             },
             { 
                 id: 32, 
                 name: "img32.jpg", 
                 category: "street", 
                 description: "Pigeons in flight",
-                image: "images/pigeons.png" 
+                image: "images/Pigeons.png" 
             },
             { 
                 id: 33, 
                 name: "img33.jpg", 
                 category: "street", 
                 description: "My buddy",
-                image: "images/losan.png" 
+                image: "images/Losan.png" 
             },
             { 
                 id: 34, 
                 name: "img34.jpg", 
                 category: "architecture", 
                 description: "Nice composition",
-                image: "images/lisbon.png" 
+                image: "images/Lisbon.png" 
             },
             { 
                 id: 35, 
                 name: "img35.jpg", 
                 category: "architecture", 
                 description: "A memorial in Lisbon",
-                image: "images/monolith.png" 
+                image: "images/Monolith.png" 
             },
             { 
                 id: 36, 
                 name: "img36.jpg", 
                 category: "street", 
                 description: "A tunnel",
-                image: "images/tunnel.png" 
+                image: "images/Tunnel.png" 
             },
             { 
                 id: 37, 
                 name: "img37.jpg", 
                 category: "street", 
                 description: "It's a gas station",
-                image: "images/dino.png" 
+                image: "images/Dino.png" 
             },
             { 
                 id: 38, 
                 name: "img38.jpg", 
                 category: "portraits", 
                 description: "My other dog",
-                image: "images/blue.png" 
+                image: "images/Blue.png" 
             },
             { 
                 id: 39, 
                 name: "img39.jpg", 
                 category: "portraits", 
                 description: "Friends enjoying a good laugh",
-                image: "images/bibb+simon.png" 
+                image: "images/Bibb+Simon.png" 
             },
             { 
                 id: 40, 
                 name: "img40.jpg", 
                 category: "street", 
                 description: "Slow Shutter Drive",
-                image: "images/lights.png" 
+                image: "images/Lights.png" 
             },
             { 
                 id: 41, 
                 name: "img41.jpg", 
                 category: "street", 
                 description: "Neon car dealer",
-                image: "images/courtesy.png" 
+                image: "images/Courtesy.png" 
             },{ 
                 id: 42, 
                 name: "img42.jpg", 
                 category: "Street", 
                 description: "Cool Mural",
-                image: "images/big head.png" 
+                image: "images/Big Head.png" 
             },{ 
                 id: 43, 
                 name: "img43.jpg", 
                 category: "street", 
                 description: "Just some cats",
-                image: "images/cats.png" 
+                image: "images/Cats.png" 
             },{ 
                 id: 44, 
                 name: "img45.jpg", 
                 category: "architecture", 
                 description: "Solid bridge",
-                image: "images/archbridge.png" 
+                image: "images/Archbridge.png" 
             },{ 
                 id: 46, 
                 name: "img46.jpg", 
                 category: "street", 
                 description: "Decisions decisions",
-                image: "images/library.png" 
+                image: "images/Library.png" 
             },{ 
                 id: 47, 
                 name: "img47.jpg", 
                 category: "street", 
                 description: "Textured posters",
-                image: "images/posters.png" 
+                image: "images/Posters.png" 
             },
         ];
         
