--- a/photography.html
+++ b/photography.html
@@ -535,7 +535,7 @@
                 name: "img28.jpg", 
                 category: "street", 
                 description: "Kid getting some much needed screentime at a crowded event",
-                image: "images/Screentime.png" 
+                image: "images/screentime.png" 
             },
             { 
                 id: 29, 
@@ -549,7 +549,7 @@
                 name: "img30.jpg", 
                 category: "landscapes", 
                 description: "Guy living in the moment",
-                image: "images/Doublesunset.png" 
+                image: "images/doublesunset.png" 
             },
             { 
                 id: 31, 
@@ -638,7 +638,7 @@
                 name: "img43.jpg", 
                 category: "street", 
                 description: "Just some cats",
-                image: "images/Cats.png" 
+                image: "images/cats.png" 
             },{ 
                 id: 44, 
                 name: "img45.jpg", 
@@ -650,13 +650,13 @@
                 name: "img46.jpg", 
                 category: "street", 
                 description: "Decisions decisions",
-                image: "images/Library.png" 
+                image: "images/library.png" 
             },{ 
                 id: 47, 
                 name: "img47.jpg", 
                 category: "street", 
                 description: "Textured posters",
-                image: "images/Posters.png" 
+                image: "images/posters.png" 
             },
         ];
         
