--- a/photography.html
+++ b/photography.html
@@ -549,7 +549,7 @@
                 name: "img30.jpg", 
                 category: "landscapes", 
                 description: "Guy living in the moment",
-                image: "images/doublesunset.png" 
+                image: "images/DoubleSunset.png" 
             },
             { 
                 id: 31, 
