--- a/graphic-design.html
+++ b/graphic-design.html
@@ -504,8 +504,8 @@
                     "images/Shaped testing Brand guide-11.png",
                     "images/Shaped testing Brand guide-14.png",
                     "images/Shaped testing Brand guide-13.png",
-                    "images/Shaped testing photo-04.png",
-                    "images/Shaped testing photo-01.png",
+                    "images/shaped testing photo-04.png",
+                    "images/shaped testing photo-01.png",
 
                 ]
             },
