--- a/graphic-design.html
+++ b/graphic-design.html
@@ -529,29 +529,29 @@
                 id: 3,
                 title: "Brand Identity Design",
                 description: "A full brand identity created for a local Hawaiian Shirt Store.",
-                thumbnail: "images/dirt cheap logo.png", // Replace with your actual thumbnail
+                thumbnail: "images/Dirt cheap logo.png", // Replace with your actual thumbnail
                 tags: ["Print Design", "Branding", "Logo Design"],
                 fullDescription: "Developed a complete brand identity for a local Hawaiian shirt store that previously relied solely on word-of-mouth marketing. Created a cohesive visual and messaging strategy, including a flyer campaign, refreshed social media presence, and original content to enhance engagement and attract new customers.",
                 client: "Nik Wassilew",
                 galleryImages: [
-                    "images/dirt cheap-01.png",
-                    "images/dirt cheap-02.png",
-                    "images/dirt cheap-03.png",
-                    "images/dirt cheap-04.png",
-                    "images/dirt cheap-05.png",
-                    "images/dirt cheap-06.png",
-                    "images/dirt cheap-07.png",
-                    "images/dirt cheap-08.png",
-                    "images/dirt cheap-09.png",
-                    "images/dirt cheap-10.png",
-                    "images/dirt cheap-11.png",
-                    "images/dirt cheap-12.png",
-                    "images/dirt cheap-13.png",
-                    "images/dirt cheap-14.png",
-                    "images/dirt cheap-15.png",
-                    "images/dirt cheap-16.png",
-                    "images/dirt cheap-17.png",
-                    "images/dirt cheap-18.png",
+                    "images/Dirt Cheap-01.png",
+                    "images/Dirt Cheap-02.png",
+                    "images/Dirt Cheap-03.png",
+                    "images/Dirt Cheap-04.png",
+                    "images/Dirt Cheap-05.png",
+                    "images/Dirt Cheap-06.png",
+                    "images/Dirt Cheap-07.png",
+                    "images/Dirt Cheap-08.png",
+                    "images/Dirt Cheap-09.png",
+                    "images/Dirt Cheap-10.png",
+                    "images/Dirt Cheap-11.png",
+                    "images/Dirt Cheap-12.png",
+                    "images/Dirt Cheap-13.png",
+                    "images/Dirt Cheap-14.png",
+                    "images/Dirt Cheap-15.png",
+                    "images/Dirt Cheap-16.png",
+                    "images/Dirt Cheap-17.png",
+                    "images/Dirt Cheap-18.png",
                 ]
             },
             {
