--- a/graphic-design.html
+++ b/graphic-design.html
@@ -558,12 +558,12 @@
                 id: 4,
                 title: "UI/UX Design Project",
                 description: "User interface design for web browser",
-                thumbnail: "images/ui.png", // Replace with your actual thumbnail
+                thumbnail: "images/UI.png", // Replace with your actual thumbnail
                 tags: ["UI/UX", "Web Design", "HTML"],
                 fullDescription: "This Website. The one you are looking at right now. Cmon, it's pretty fun.",
                 client: "Tyler Kaplan Portfolio Inc.",
                 galleryImages: [
-                    "images/ui.png",
+                    "images/UI.png",
                     
                 ]
             }
