--- a/contents.html
+++ b/contents.html
@@ -116,7 +116,7 @@
             <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close" onclick="window.location.href='index.html'"></button>
+                <button aria-label="Close" onclick="window.location.href='landing.html'"></button>
             </div>
         </div>
         <div class="window-body">
@@ -128,7 +128,7 @@
             </div>
             
             <div class="toolbar">
-                <button onclick="window.location.href='index.html'" title="Back">Back</button>
+                <button onclick="window.location.href='landing.html'" title="Back">Back</button>
             </div>
             
             <div class="window-content">
