--- a/contents.html
+++ b/contents.html
@@ -201,6 +201,6 @@
             });
         });
     </script>
-    <script src="dvd-animation.js"></script>
+    <script src="DVD-animation.js"></script>
 </body>
 </html>
