--- a/landing.html
+++ b/landing.html
@@ -136,6 +136,6 @@
             }
         }
     </script>
-    <script src="dvd-animation.js"></script>
+    <script src="DVD-animation.js"></script>
 </body>
 </html>
