--- a/resume.html
+++ b/resume.html
@@ -183,5 +183,6 @@ Last Updated: [3/25]<span class="cursor"></span>
             });
         });
     </script>
+    <script src="DVD-animation.js"></script>
 </body>
 </html>
