--- a/resume.html
+++ b/resume.html
@@ -118,6 +118,16 @@ Marketing graduate with practical experience in real estate marketing and sales.
 
 <strong>EXPERIENCE</strong>
 --------------------------------------
+<strong>Marketing Coordinator</strong>
+Pacific Sotheby's International Realty | Newport Beach, CA | July 2025 - Present
+
+• Coordinate marketing strategies and branded materials for 100+ real estate agents, ensuring timely delivery and compliance with MLS standards and state regulations.
+• Develop and refine agents’ personal brand identities through creative campaigns, advertising initiatives, and property-specific marketing strategies.
+• Manage production and distribution of flyers, postcards, advertisements, and digital assets, maintaining accuracy, quality, and consistency across channels.
+• Design marketing collateral such as email blasts, flyers, and postcards to support agents’ outreach and enhance property visibility.
+• Serve as a key liaison between agents, advertising affiliates, and internal teams, providing professional and client-focused support to strengthen agent satisfaction and loyalty.
+• Balance creative execution with logistical coordination, ensuring both compliance and strong brand presence in a fast-paced, high-volume environment.
+
 <strong>Marketing & Sales Associate</strong>
 CBRE | Phoenix, AZ | Summer 2023
 
