--- a/photography.html
+++ b/photography.html
@@ -713,6 +713,13 @@
                 description: "Textured posters",
                 image: "images/posters.png" 
             },
+            { 
+                id: 48, 
+                name: "img48.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/_DSF8917.jpg" 
+            },
         ];
         
         // Navigation state
