horse races cont

--- a/photography.html
+++ b/photography.html
@@ -720,6 +720,13 @@
                 description: "The Horse Races",
                 image: "images/_DSF8917.jpg" 
             },
+            { 
+                id: 49, 
+                name: "img49.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/_DSF8893.jpg" 
+            },
         ];
         
         // Navigation state
