--- a/photography.html
+++ b/photography.html
@@ -713,6 +713,20 @@
                 description: "Textured posters",
                 image: "images/posters.png" 
             },
+            { 
+                id: 48, 
+                name: "img48.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/_DSF8917.jpg" 
+            },
+            { 
+                id: 49, 
+                name: "img49.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/_DSF8893.jpg" 
+            },
         ];
         
         // Navigation state
@@ -919,4 +933,5 @@
         });
     </script>
 </body>
+
 </html>
