--- a/graphic-design.html
+++ b/graphic-design.html
@@ -554,6 +554,30 @@
                     "images/Dirt Cheap-18.png",
                 ]
             },
+              {
+                id: 3,
+                title: "Brand Redesign",
+                description: "A brand identity and logo redesign created for a local burger shop.",
+                thumbnail: "images/wedge gif final.gif", // Replace with your actual thumbnail
+                tags: ["Print Design", "Branding", "Logo Design"],
+                fullDescription: "I redesigned the logo and some branding elements for a local Burger Staple in Costa Mesa, CA",
+                client: "Wedge Burger",
+                galleryImages: [
+                    "images/wedge 1.png",
+                    "images/wedge 2.png",
+                    "images/wedge 3.png",
+                    "images/wedge 4.png",
+                    "images/wedge 5.png",
+                    "images/wedge 6.png",
+                    "images/wedge 7.png",
+                    "images/wedge 8.png",
+                    "images/wedge 9.png",
+                    "images/wedge 10.png",
+                    "images/wedge 11.png",
+                    "images/wedge 12.png",
+                    "images/wedge gif final.gif",
+                ]
+            },
             {
                 id: 4,
                 title: "UI/UX Design Project",
@@ -744,3 +768,4 @@
     <script src="DVD-animation.js"></script>
 </body>
 </html>
+
