--- a/spec-ad.html
+++ b/spec-ad.html
@@ -499,7 +499,7 @@
                 id: 1,
                 title: "Boomers Campaign",
                 description: "A targeted advertising campaign reaching the 'zoomer' demographic with strategic messaging and creative execution.",
-                thumbnail: "images/boomers logo.png", // Replace with your actual thumbnail
+                thumbnail: "images/Boomers Logo.png", // Replace with your actual thumbnail
                 tags: ["Target Demo", "Traditional Media", "Brand Awareness"],
                 
                 // Tab content
