--- a/spec-ad.html
+++ b/spec-ad.html
@@ -801,7 +801,7 @@
                         <p>AI slop visuals</p>
                         
                         <div class="creative-gallery">
-                            <img src="images/wahoosslop.png" alt="Creative Asset 1" class="creative-image" onclick="openImageViewer('images/" alt="Creative')">
+                            <img src="images/Wahoosslop.png" alt="Creative Asset 1" class="creative-image" onclick="openImageViewer('images/Wahoosslop.png" alt="Creative')">
                             <img src="images/placeholder-storyboard-2.jpg" alt="Storyboard" class="creative-image" onclick="openImageViewer('images/placeholder-storyboard-2.jpg')">
                         </div>
                     `
