--- a/spec-ad.html
+++ b/spec-ad.html
@@ -740,7 +740,7 @@
         </thead>
         <tbody>
             <tr>
-                <td style="border: 1px solid #808080; padding: 10px; vertical-align: top; word-wrap: break-word; white-space: normal;">🎵 <em>Upbeat, playful surf/skate punk track begins</em></td>
+                <td style="border: 1px solid #808080; padding: 10px; vertical-align: top; word-wrap: break-word; white-space: normal;">Upbeat Vampire Weekend, Strokes type Beat begins</em></td>
                 <td style="border: 1px solid #808080; padding: 10px; vertical-align: top; word-wrap: break-word; white-space: normal;">Logo animation flickers on</td>
             </tr>
             <tr style="background-color: #f8f8f8;">
