--- a/photography.html
+++ b/photography.html
@@ -712,6 +712,12 @@
                 category: "street", 
                 description: "Textured posters",
                 image: "images/posters.png" 
+            },{ 
+                id: 48, 
+                name: "img48.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/races1.png" 
             },
         ];
         
@@ -921,4 +927,5 @@
 </body>
 
 </html>
+
 
