--- a/photography.html
+++ b/photography.html
@@ -719,6 +719,41 @@
                 description: "The Horse Races",
                 image: "images/races1.png" 
             },
+            { 
+                id: 49, 
+                name: "img49.jpg", 
+                category: "street", 
+                description: "The range",
+                image: "images/races4.jpg" 
+            },
+            { 
+                id: 50, 
+                name: "img50.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/races2.jpg" 
+            },
+            { 
+                id: 51, 
+                name: "img51.jpg", 
+                category: "street", 
+                description: "The Horse Races",
+                image: "images/races3.jpg" 
+            },
+             { 
+                id: 52, 
+                name: "img52.jpg", 
+                category: "street", 
+                description: "The Beach",
+                image: "images/races5.jpg" 
+            },
+             { 
+                id: 53, 
+                name: "img53.jpg", 
+                category: "street", 
+                description: "The Beach",
+                image: "images/races6.jpg" 
+            },
         ];
         
         // Navigation state
@@ -927,5 +962,6 @@
 </body>
 
 </html>
+
 
 
