--- a/photography.html
+++ b/photography.html
@@ -752,7 +752,7 @@
                 name: "img53.jpg", 
                 category: "street", 
                 description: "The Beach",
-                image: "images/races6.jpg" 
+                image: "images/races6.png" 
             },
         ];
         
@@ -962,6 +962,7 @@
 </body>
 
 </html>
+
 
 
 
