--- a/spec-ad.html
+++ b/spec-ad.html
@@ -424,7 +424,7 @@
                 <div class="warning-icon"></div>
                 <div class="warning-text">
                     <h3>Warning</h3>
-                    <p>To save time, money and sanity these campaigns contain AI slop. I would love to hire an actual illustrator for story boards but these are ideas that I just wanted to put out there. Perfection is the enemy of creation (I think).</p>
+                    <p>Perfection is the enemy of creation.</p>
                 </div>
             </div>
             <div class="warning-buttons">
