Add blog folder and update folder icons

--- a/contents.html
+++ b/contents.html
@@ -90,6 +90,9 @@
         .folder-icon.resume {
             background-image: url('https://win98icons.alexmeub.com/icons/png/notepad_file-0.png');
         }
+        folder-icon.blog {
+            background-image: url('https://win98icons.alexmeub.com/icons/png/computer_explorer-4.png');
+        }
         
         .folder-icon.photography {
             background-image: url('https://win98icons.alexmeub.com/icons/png/camera-0.png');
@@ -140,6 +143,10 @@
                     <div id="resume-folder" class="folder" onclick="folderClick(this, 'resume.html')">
                         <div class="folder-icon resume"></div>
                         <div class="folder-label">Resume</div>
+                    </div>
+                     <div id="blog-folder" class="folder" onclick="folderClick(this, 'blog.html')">
+                        <div class="folder-icon blog"></div>
+                        <div class="folder-label">Blog</div>
                     </div>
                     
                     <div id="photography-folder" class="folder" onclick="folderClick(this, 'photography.html')">
@@ -213,3 +220,4 @@
     <script src="DVD-animation.js"></script>
 </body>
 </html>
+
