Fix HTML encoding issues in contents.html

--- a/contents.html
+++ b/contents.html
@@ -90,7 +90,7 @@
         .folder-icon.resume {
             background-image: url('https://win98icons.alexmeub.com/icons/png/notepad_file-0.png');
         }
-        folder-icon.blog {
+        .folder-icon.blog {
             background-image: url('https://win98icons.alexmeub.com/icons/png/computer_explorer-4.png');
         }
         
@@ -220,5 +220,6 @@
     <script src="DVD-animation.js"></script>
 </body>
 </html>
+
 
 
