Update blog icon URL

--- a/blog.html
+++ b/blog.html
@@ -246,7 +246,7 @@
                 id: 1,
                 title: "Welcome to My Blog",
                 date: "December 1, 2024",
-                icon: "https://web.archive.org/web/20091027112959/http://geocities.com/jinkunih/gif/anim/133.gif",
+                icon: "rsvlt.gif",
                 position: { top: '15%', left: '10%', rotation: -5 },
                 content: `
                     <p>Hey there! Welcome to my corner of the internet. I've been wanting to start a blog for a while now, and I finally decided to just go for it. This space is going to be a mix of my thoughts on design, photography, life in California, and whatever else catches my attention.</p>
