Update blog post title and icon for California Winter

--- a/blog.html
+++ b/blog.html
@@ -264,9 +264,9 @@
             },
             {
                 id: 2,
-                title: "Chasing Light",
+                title: "California Winter",
                 date: "December 5, 2024",
-                icon: "https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=200",
+                icon: "images/californiawinter.gif",
                 position: { top: '60%', left: '70%', rotation: 8 },
                 content: `
                     <p>There's a specific feeling I get when I'm out shooting during golden hour. The world transforms into something magical - shadows stretch long across the pavement, everything glows with warmth, and ordinary scenes become extraordinary.</p>
