Remove theme styles and switcher scripts

--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="theme-styles.css">
-    <script src="theme-switcher.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
@@ -57,7 +55,7 @@
             width: 120px;
             height: 120px;
             object-fit: contain;
-            border: 3px solid #ffffff;
+            border: none;
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
             background-color: transparent;
         }
