Add new blog post: 'It's All a Performance'
Added a new blog post about personal reflections and societal perceptions.

--- a/blog.html
+++ b/blog.html
@@ -283,6 +283,45 @@
                     <p>Rankings coming soon"
                 `
             },
+             id: 3,
+                title: "It's All a Performance",
+                date: "January 6, 2026",
+                icon: "images/finger.gif",
+                position: { top: '7%', left: '20%', rotation: -8 },
+                content: `
+
+                    <p> Every Saturday, I leave the house and set out with a canvas tote bag brimming with items my pockets cannot contain:  wallet, keys, pocket radio with wired earbuds, flip phone, digital camera, notebook, pen, one pack of ZYN, and whatever book I am currently reading.</p>
+
+                    <p> Upon entering the world with this inventory, I begin battling my inner thoughts. They are telling me “You are being performative.” That barista thinks I am a clown. The teens driving their E-bikes know I am just another male archetype. The lady walking her goldendoodle. She doesn’t care. She’s not chronically online. Yet, I still think she may.</p>
+                    
+                    <p> Take the humble book. By reading it in public, I signal “I am better than you”. Truthfully, it’s just my goal to read more. Just one book a month. And I like doing that in the park or the beach or while the judgmental barista is whisking my matcha.</p>
+
+                    <p> There can be a similar case made for all of these items. The wired headphones are cheap yet durable. They don’t completely block out the world. I can hear the birds chirping and kids playing on the rickety swing set while my music hums in the background.</p>
+
+                    <p> The camera helps me explore new areas with intention. Looking for interesting buildings and moments to document. I want to remember this beautiful day. How the sun dances between the leaves on the trees. How their shadows fall on the concrete. How the abandoned building contrasts against the massive sign proclaiming “BBQ King”.</p>
+
+                    <p> The flip phone means I can stay in contact with the people I love without the ability to scroll whenever I remember I am bored. I cannot bust it out when I make eye contact with the man in the F-150 who’s also waiting for the light to turn.</p>
+
+                    <p> I pop the ZYN in whenever the feelings start to creep in. The slow release of nicotine traveling from my gums and into my brain deafens the anxiety of carrying this tote bag.</p>
+
+                    <p> The note pad lets me scribble a quick thought:</p>
+
+                    <p>  “If you’re constantly searching for meaning you’ll never find it”</p>
+
+                    <p> There is something there, but I quickly downplay any interesting idea I have.</p>
+
+                    <p> The radio. The radio because I like the static when I listen to a Dodger game. The broadcaster wading in and out of the soft noisy sea helps elevate the rhythm of the game. I want to hear music that someone else curated. I am tired of my playlists. I like listening to some classical music on these aimless strolls. Yeah I can do that on Spotify but then I don't have that soft voice telling me “That was Ludwig van Beethoven’s Piano Sonata No. 14, performed by Rober Safdie of the Portland Orchestra and you’re listening to KUSC, supported by listeners like you.” I am discovering lost media. It is here and gone, transmitted over the invisible waves. A special moment between me and the host.</p>
+
+                    <p> I got to hear from a lovely lady talking about the state of the restaurant industry in Orange County, the closures and anticipated openings. Arthur & Sons Steak and Bourbon is reopening in Disneyland after a “reconceptualization" all the while Toast in Costa Mesa is closing, never having recovered from the COVID-19 pandemic she says. I got to hear her say a chef friend of hers opened an Asian fusion restaurant near the Irvine Spectrum. Dismissively clarifying it is not in the Irvine spectrum because she and the listeners of public radio both know the “Irvine spectrum” is a manicured corporate hellscape where creativity goes to die and themed chain restaurants thrive.</p>
+
+                    <p> I did not catch her name, and I probably never will but that is the beauty of tuning in. These are just some of the joys being a performative male can bring you.</p>
+
+                    <p> At the top I lied, I do not do this every Saturday. I am afraid of what others will think. I am a man in search of meaning in the modern world and my gear proves it. These items are not making anything better when I let my negative thoughts win. I let shame and fear control me. Sucking the joy out of items I once found utility in. But we all know it is not the objects. It is me.</p>
+
+                    <p> “Nobody cares unless I think they do.”</p>
+
+                `
+            },
         ];
         
         let currentPostIndex = -1;
