--- a/photography.html
+++ b/photography.html
@@ -747,6 +747,55 @@
                 description: "The Beach",
                 image: "images/races5.jpg" 
             },
+            { 
+                id: 53, 
+                name: "img53.jpg", 
+                category: "portrait", 
+                description: "Rawr",
+                image: "images/R0000004.jpg" 
+            },
+            { 
+                id: 54, 
+                name: "img54.jpg", 
+                category: "street", 
+                description: "The Beach",
+                image: "images/R0000015.jpg" 
+            },
+            { 
+                id: 55, 
+                name: "img55.jpg", 
+                category: "street", 
+                description: "The Beach part 50000",
+                image: "images/R0000018.jpg" 
+            },
+            { 
+                id: 56, 
+                name: "img56.jpg", 
+                category: "street", 
+                description: "Scope the fit",
+                image: "images/R0000038.jpg" 
+            },
+            { 
+                id: 57, 
+                name: "img57.jpg", 
+                category: "street", 
+                description: "Bo Nix beat the wheels off the Packers",
+                image: "images/R0000146.jpg" 
+            },
+            { 
+                id: 58, 
+                name: "img58.jpg", 
+                category: "street", 
+                description: "Christmas in California",
+                image: "images/R0000158.jpg" 
+            },
+            { 
+                id: 59, 
+                name: "img59.jpg", 
+                category: "architecture", 
+                description: "Lebron's BBQ spot",
+                image: "images/R0000186.jpg" 
+            },
         ];
         
         // Navigation state
@@ -955,6 +1004,7 @@
 </body>
 
 </html>
+
 
 
 
