Insert image in blog.html
Added an image to the blog post.

--- a/blog.html
+++ b/blog.html
@@ -320,6 +320,8 @@
                     <p> At the top I lied, I do not do this every Saturday. I am afraid of what others will think. I am a man in search of meaning in the modern world and my gear proves it. These items are not making anything better when I let my negative thoughts win. I let shame and fear control me. Sucking the joy out of items I once found utility in. But we all know it is not the objects. It is me.</p>
 
                     <p> “Nobody cares unless I think they do.”</p>
+
+                    <img src="images/R0000186.jpg">
                 `
             },
         ];
