--- a/blog.html
+++ b/blog.html
@@ -201,6 +201,11 @@
         .post-navigation button:disabled {
             opacity: 0.5;
         }
+        .post-body img.small {
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
     </style>
 </head>
 <body>
@@ -321,7 +326,7 @@
 
                     <p> “Nobody cares unless I think they do.”</p>
 
-                    <img src="images/R0000186.jpg">
+                    <img src="images/R0000186.jpg" class="small">
                 `
             },
         ];
